RESOLVED FIXED 127678
Buildfix for !ENABLE(COMPARE_AND_SWAP) platforms after r162774
https://bugs.webkit.org/show_bug.cgi?id=127678
Summary Buildfix for !ENABLE(COMPARE_AND_SWAP) platforms after r162774
Csaba Osztrogonác
Reported 2014-01-27 01:59:42 PST
After http://trac.webkit.org/changeset/162774 we should use std::mutex and std::atomic instead of WTF threading primitives. This change broke !ENABLE(COMPARE_AND_SWAP) builds, for example the ARM traditional build: /home/webkitbuildbot/slaves/efl-ARMv7-traditional-build/buildslave/efl-armv7-traditional-build/build/Source/WebCore/platform/text/TextBreakIterator.cpp: In function 'bool WebCore::compareAndSwapNonSharedCharacterBreakIterator(WebCore::TextBreakIterator*, WebCore::TextBreakIterator*)': /home/webkitbuildbot/slaves/efl-ARMv7-traditional-build/buildslave/efl-armv7-traditional-build/build/Source/WebCore/platform/text/TextBreakIterator.cpp:279:12: error: 'Mutex' does not name a type /home/webkitbuildbot/slaves/efl-ARMv7-traditional-build/buildslave/efl-armv7-traditional-build/build/Source/WebCore/platform/text/TextBreakIterator.cpp:280:5: error: 'MutexLocker' was not declared in this scope /home/webkitbuildbot/slaves/efl-ARMv7-traditional-build/buildslave/efl-armv7-traditional-build/build/Source/WebCore/platform/text/TextBreakIterator.cpp:280:17: error: expected ';' before 'locker'
Attachments
Patch (2.03 KB, patch)
2014-01-27 02:02 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-01-27 02:02:34 PST
Zoltan Herczeg
Comment 2 2014-01-27 02:40:31 PST
Comment on attachment 222312 [details] Patch rs=me
WebKit Commit Bot
Comment 3 2014-01-27 03:08:46 PST
Comment on attachment 222312 [details] Patch Clearing flags on attachment: 222312 Committed r162833: <http://trac.webkit.org/changeset/162833>
WebKit Commit Bot
Comment 4 2014-01-27 03:08:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.