Buildfix for !ENABLE(COMPARE_AND_SWAP) platforms after r162774 https://bugs.webkit.org/show_bug.cgi?id=127678

Reviewed by Zoltan Herczeg.

* platform/text/TextBreakIterator.cpp:
(WebCore::compareAndSwapNonSharedCharacterBreakIterator):
Use std::mutex instead of Mutex and std::lock_guard instead of MutexLocker.


Canonical link: https://commits.webkit.org/145695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162833 268f45cc-cd09-0410-ab3c-d52691b4dbfc